# persona

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requests.http
.claude/agents/: pm-orchestrator.md
.claude/skills/api-flow-view/: SKILL.md  tracer.html
.claude/skills/deepagents-study-expert/: SKILL.md
.claude/skills/deepagents-study-expert/agents/: openai.yaml
0_deepagnet_study/: 00_agent_harness_reference.md  01_07_tools_backends_state_map.md  01_17_tools_backends_state_map.md  01_tools.md  02_backends.md  02_state_storage_map.html  03_07_execution_environment_map.md  03_permissions.md  04_multimodality.md  05_sandboxes.md  06_interpreters.md  07_dynamic_subagents.md  08_event_streaming.md  09_streaming.md  10_skills.md  11_memory.md  12_context_engineering.md  13_profiles.md  14_subagents.md  15_async_subagents.md  16_human_in_the_loop.md  17_grading_rubrics.md
app/: __init__.py  config.py  errors.py  main.py
app/agents/: factory.py  harness_profiles.py  persona_agent.py  prompts.py  runner.py  tools.py
app/api/: routes.py  webrtc_routes.py
app/providers/: databricks.py  image_provider.py  model_provider.py
app/schemas/: call.py  character.py  persona.py  tool.py  webrtc.py
app/services/: character_service.py  persona_service.py
app/store/: character_store.py  conversation_store.py  image_store.py  persona_store.py
app/webrtc/: __init__.py  gateway.py
docs/: PM.md
scripts/: webrtc_poc_client.py
tests/: test_character_agent_loop.py  test_character_tools.py  test_harness_profiles.py  test_smoke.py  test_webrtc_routes.py
(+1 files in other folders)
